--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>ColorChicken</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="logo.ico" />
+    <link rel="icon" href="logoColorChicken.ico" />
   </head>
   <body>
     <app-root></app-root>
